--- a/src/styles/blocks/_works.scss
+++ b/src/styles/blocks/_works.scss
@@ -25,13 +25,63 @@
             }
         }
     }
+    
+    &__button {
+        display: block;
+        margin: 0 auto;
+    }
 
     &__grid {
         margin-bottom: 20px;
     }
 
-    &__button {
-        display: block;
-        margin: 0 auto;
+    &__item {
+        overflow: hidden;   
+    }
+
+    &__link {
+        position: relative;
+        z-index: 1;
+        
+        &:before {
+            position: absolute;
+            z-index: 3;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            font-size: 3em;
+            color: rgba($orange, 0.6);
+            opacity: 0;
+            @extend %transition;
+        }
+
+        &:after {
+            content: "";
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            @extend %transition;
+        }
+        
+        &:hover:before {
+            opacity: 1;
+        }
+
+        &:hover:after {
+            background-color: rgba($gray-dark, 0.4);
+        }
+        
+        img {
+            @extend %transition;
+        }
+
+        &:hover img{
+            transform: scale(1.1);
+        }
     }
 }
