--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -11,7 +11,7 @@
     }
 
     &__photo {
-        max-width: 410px;
+        max-width: rem(410px);
 
         @media (max-width: $screen-md) {
             max-width: 60%;
@@ -23,7 +23,7 @@
     }
 
     &__content {
-        padding: 35px 25px;
+        padding: rem(35px) rem(25px);
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -33,13 +33,12 @@
         @media (max-width: $screen-md) {
             flex-direction: column;
             align-items: center;
-            padding: 25px 0;
         }
     }
 
     &__inner {
         display: flex;
-        margin-bottom: 15px;
+        margin-bottom: rem(15px);
         
         &:last-child {
             margin-bottom: 0;
@@ -50,19 +49,19 @@
         margin: 0;
 
         @media (max-width: $screen-md) {
-            margin-bottom: 25px;
+            margin-bottom: rem(25px);
         }
     }
 
     &__title {
         color: $gray;
         font-style: normal;
-        min-width: 100px;
+        min-width: rem(100px);
     }
 
     &__text {
         color: $gray-dark;
-        margin-left: 15px;
+        margin-left: rem(15px);
     }
 
 }
