--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'helpers/variables';
 @import 'helpers/mixins';
 @import 'helpers/placeholders';
+@import 'helpers/functions';
 
 // vendors
 @import 'vendors/_masonry';
