--- a/src/styles/base/_icons.scss
+++ b/src/styles/base/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:  url('../resources/fonts/icomoon.eot?wiwdw2');
-    src:  url('../resources/fonts/icomoon.eot?wiwdw2#iefix') format('embedded-opentype'),
-      url('../resources/fonts/icomoon.ttf?wiwdw2') format('truetype'),
-      url('../resources/fonts/icomoon.woff?wiwdw2') format('woff'),
-      url('../resources/fonts/icomoon.svg?wiwdw2#icomoon') format('svg');
+    src:  url('../resources/fonts/icomoon.eot?5t0t8z');
+    src:  url('../resources/fonts/icomoon.eot?5t0t8z#iefix') format('embedded-opentype'),
+      url('../resources/fonts/icomoon.ttf?5t0t8z') format('truetype'),
+      url('../resources/fonts/icomoon.woff?5t0t8z') format('woff'),
+      url('../resources/fonts/icomoon.svg?5t0t8z#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
   }
@@ -24,6 +24,9 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
+  .icon-top-arrow:before {
+    content: "\e908";
+  }
   .icon-search:before {
     content: "\e906";
   }
