--- a/src/styles/blocks/_works.scss
+++ b/src/styles/blocks/_works.scss
@@ -1,17 +1,8 @@
 .works {
-    padding: 90px 0 40px;
-
-    
-    @media (max-width: $screen-lg) {
-        padding-top: 80px;
-    }
-    
-    @media (max-width: $screen-md) {
-        padding-top: 40px;
-    }
+    padding: rem(90px) 0 rem(40px);
 
     @media (max-width: $screen-md) {
-        padding: 25px 0;
+        padding: rem(25px) 0;
     }
 
     &__filter {
@@ -32,7 +23,7 @@
     }
 
     &__grid {
-        margin-bottom: 20px;
+        margin-bottom: rem(20px);
     }
 
     &__item {
@@ -44,12 +35,9 @@
         z-index: 1;
         
         &:before {
-            position: absolute;
+            @include center(x, y);
             z-index: 3;
-            top: 50%;
-            left: 50%;
             width: 100%;
-            transform: translate(-50%, -50%);
             text-align: center;
             font-size: 3em;
             color: rgba($orange, 0.6);
