--- a/src/styles/base/_core.scss
+++ b/src/styles/base/_core.scss
@@ -1,19 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300&display=swap&subset=cyrillic-ext');
 
-.wrapper {
-	width: 100%;
-	height: 100%;
-	position: relative;
-	overflow: hidden;
-    padding-top: rem(200px);
-}
-
-.container {
-    max-width: rem(1200px);
-    margin: 0 auto;
-    padding: 0 rem(15px);
-}
-
 html, body {
     color: $gray-dark;
     font-family: $merriweather;
@@ -28,8 +14,25 @@ html, body {
     }
 }
 
+.wrapper {
+	max-width: 100%;
+	position: relative;
+	overflow: hidden;
+}
+
+.container {
+    max-width: rem(1200px);
+    margin: 0 auto;
+    padding: 0 rem(15px);
+}
+
+.main {
+    padding-top: rem(200px);
+}
+
 a {
-    display: block;
+    display: inline-block;
+    vertical-align: top;
     text-decoration: none;
     color: inherit;
 }
