--- a/src/styles/blocks/_burger.scss
+++ b/src/styles/blocks/_burger.scss
@@ -2,6 +2,7 @@
 	display: none;
 	background-color: $orange;
 	padding: rem(18px) rem(14px);
+	border: 0;
 	border-radius: 3px;
 	cursor: pointer;
 	position: relative;
