--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -13,8 +13,14 @@
             text-align: center;
         }
 
-        span {
+        a {
             color: $orange;
+            border-bottom: 1px solid transparent;
+            transition: border-bottom 0.3s linear;
+
+            &:hover {
+                border-bottom: 1px solid $orange;
+            }
         }
     }
 }
