--- a/src/styles/blocks/_scroll-top.scss
+++ b/src/styles/blocks/_scroll-top.scss
@@ -9,6 +9,7 @@
     background-color: rgba($orange, 0.8);
     cursor: pointer;
     display: none;
+    border: 0;
 
     &:hover &__item {
         color: $gray-dark;
