--- a/src/styles/blocks/_works.scss
+++ b/src/styles/blocks/_works.scss
@@ -42,7 +42,7 @@
             font-size: 3em;
             color: rgba($orange, 0.6);
             opacity: 0;
-            @extend %transition;
+            transition: opacity 0.3s linear;
         }
 
         &:after {
@@ -53,7 +53,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            @extend %transition;
+            transition: background-color 0.3s linear;
         }
         
         &:hover:before {
@@ -65,7 +65,7 @@
         }
         
         img {
-            @extend %transition;
+            transition: transform 0.3s linear;
         }
 
         &:hover img{
