--- a/src/styles/blocks/_burger.scss
+++ b/src/styles/blocks/_burger.scss
@@ -20,6 +20,7 @@
 		background-color: #fff;
 		position: relative;
 		z-index: 50;
+		transition: background-color 0.3s linear;
 
 		&:before, &:after {
 			content: "";
@@ -29,7 +30,7 @@
 			width: 100%;
 			height: 100%;
 			background-color: #fff;
-			@extend %transition;
+			transition: all 0.3s linear;
 		}
 
 		&:before {
