--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -46,13 +46,13 @@
 	}
 
 	&-bottom {
-		padding-top: rem(50px);
-		padding-bottom: rem(20px);
+		padding-top: rem(35px);
+		padding-bottom: rem(35px);
 		position: relative;
+		transition: background-color 0.3s linear;
 		
 		@media (max-width: $screen-lg) {
-			padding-top: rem(20px);
-			background-color: rgba($gray-dark, 0.3);
+			padding: rem(20px) 0;
 		}
 
 		@media (max-width: $screen-sm) {
@@ -104,13 +104,26 @@
 					text-align: center;
 					padding: rem(15px) rem(20px);
 				}
+				
+				&:after {
+					@media (max-width: $screen-lg) {
+						height: 1px;
+						background-color: $gray-e3e3e3;
+						transform: scaleX(1);
+					}
+				}
 
-				&:hover {
+				&:hover,
+				&.active {
 					@media (max-width: $screen-lg) {
 						background-color: rgba($gray-dark, 0.8);
 					}
 				}
 			}
+		}
+
+		&.background {
+			background-color: rgba($gray-dark, 0.3);
 		}
 	}
 }
