--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -23,7 +23,7 @@
             height: 2px;
             background-color: $white;
             transform: scaleX(0);
-            @extend %transition;
+            transition: transform 0.3s linear;
         }
 
         &:hover:after,
@@ -36,7 +36,7 @@
         
         .nav__link {
             color: $gray;
-            @extend %transition;
+            transition: color 0.3s linear;
 
             &:after {
                 background-color: $orange;
