--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -31,6 +31,7 @@
         background-color: $gray-f5f5f5;
 
         @media (max-width: $screen-md) {
+            padding: rem(25px);
             flex-direction: column;
             align-items: center;
         }
