--- a/src/styles/blocks/_works.scss
+++ b/src/styles/blocks/_works.scss
@@ -6,13 +6,20 @@
     }
 
     &__filter {
-        display: flex;
-        justify-content: center;
-
+        
         &-inner {
-            @media (max-width: $screen-md) {
+            display: flex;
+            justify-content: space-between;
+
+            @media (max-width: 550px) {
                 flex-direction: column;
                 align-items: center;
+            }
+        }
+
+        &-item {
+            @media (max-width: $screen-md) {
+                padding: 0;
             }
         }
     }
