--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -1,15 +1,15 @@
 .button {
     padding: rem(14px) rem(35px);
-    color: $white;
-    background-color: $orange;
+    color: $button-color;
+    background-color: $button-bg;
     border: 0;
-    border-radius: 2px;
+    border-radius: $button-border-radius;
     text-transform: uppercase;
     transition: cursor 0.3s linear, background-color 0.3s linear, color 0.3s linear;
     
     &:hover {
         cursor: pointer;
-        background-color: $gray-dark;
-        color: $orange;
+        background-color: $button-hover-bg;
+        color: $button-hover-color;
     }
 }
