--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -28,7 +28,7 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
-        background-color: $gray-f5f5f5;
+        background-color: $content-bg;
 
         @media (max-width: $screen-md) {
             padding: rem(25px);
@@ -55,12 +55,12 @@
     }
 
     &__title {
-        color: $gray;
+        color: $cont-title-color;
         font-style: normal;
     }
 
     &__text {
-        color: $gray-dark;
+        color: $cont-text-color;
         margin-left: rem(15px);
     }
 
