--- a/src/styles/blocks/_scroll-top.scss
+++ b/src/styles/blocks/_scroll-top.scss
@@ -6,13 +6,13 @@
     width: rem(50px);
     height: rem(50px);
     border-radius: 50%;
-    background-color: rgba($orange, 0.8);
+    background-color: rgba($scroll-bg, 0.8);
     cursor: pointer;
     display: none;
     border: 0;
 
     &:hover &__item {
-        color: $gray-dark;
+        color: $scroll-hover-color
     }
 
     &__inner {
@@ -25,7 +25,7 @@
     
     &__item {
         font-size: 2rem;
-        color: $white;
+        color: $scroll-item-color;
         transition: color 0.3s linear;
     }
 }
