--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,23 +1,105 @@
-$white:            #fff;
-$white-body:       #f8f8f8; 
-$gray:             #999;
-$gray-e3e3e3:      #e3e3e3;
-$gray-cfcfcf:      #cfcfcf;
-$gray-f5f5f5:      #f5f5f5;
-$gray-dark:        #424242;
-$orange:           #ff9311;
+$white:                   #fff;
+$white-f8:                #f8f8f8; 
+$gray:                    #999;
+$gray-e3e3e3:             #e3e3e3;
+$gray-cfcfcf:             #cfcfcf;
+$gray-f5f5f5:             #f5f5f5;
+$gray-dark:               #424242;
+$orange:                  #ff9311;
+$primary-color:             $orange;
+$secondary-color:           $gray-dark;
 
 
-$font-size-main:     14px;
-$font-size-small:    0.857em;
+$font-size-base:            14px;
+$font-size-small:           0.857em;
 
-$merriweather:      'Merriweather', serif;
 
-$light:              300;
-$regular:            400;
-$bold:               700;
+$merriweather:             'Merriweather', serif;
+$font-family-base:          $merriweather;
 
-$screen-sm:          480px;
-$screen-md:          768px;
-$screen-lg:          992px;
-$screen-xl:          1200px;
+
+$light:                     300;
+$regular:                   400;
+$bold:                      700;
+$font-weight-base:          $light;
+
+
+$border-radius-base:        2px;
+
+
+$screen-sm:                 480px;
+$screen-md:                 768px;
+$screen-lg:                 992px;
+$screen-xl:                 1200px;
+
+// ==================================================
+
+// --- body ---
+$body-color:                $gray-dark;
+$body-font-family:          $font-family-base;
+$body-font-size:            $font-size-base;
+$body-font-weight:          $font-weight-base;
+$body-bg:                   $white-f8;
+
+// --- burger ---
+$burger-bg:                 $primary-color;
+$burger-border-radius:      $border-radius-base;
+$elements-bg:               $white;
+
+// --- button ---
+$button-bg:                 $primary-color;
+$button-color:              $white;
+$button-border-radius:      $border-radius-base;
+$button-hover-bg:           $gray-dark;
+$button-hover-color:        $primary-color;
+
+// --- contacts ---
+$content-bg:                $gray-f5f5f5;
+$cont-title-color:          $gray;  
+$cont-text-color:           $gray-dark;  
+
+// --- footer ---
+$footer-link-color:         $primary-color;
+$footer-link-border:        $primary-color;
+
+// --- header ---
+$h-top-border:              $gray-cfcfcf;
+$h-top-bg:                  $white-f8;
+$h-top-text-color:          $gray-dark;
+$h-top-text-weigth:         $regular;
+$h-top-span-size:           $font-size-small;
+$h-top-span-color:          $gray;
+$h-bottom-nav-bg:           $gray-dark;
+$h-bottom-inner-bg:         $primary-color;
+$h-bottom-link-bg:          $gray-e3e3e3;
+
+// --- nav ---
+$nav-link-color:            $white;       
+$nav-link-bg:               $white;       
+$nav-bg-link-color:         $gray;       
+$nav-bg-link-bg:            $primary-color;       
+$nav-bg-link-hover:         $gray-dark;    
+
+// --- sscroll-top ---
+$scroll-bg:                 $primary-color;
+$scroll-hover-color:        $gray-dark;
+$scroll-item-color:         $white;
+
+// --- search ---
+$search-field-bg:           $white-f8;
+$search-field-border:       $gray;
+$search-field-focus:        $primary-color;
+$search-icon-color:         $primary-color;
+
+// --- socials ---
+$socials-border:            $gray-cfcfcf;
+$socials-item-border:       $gray-e3e3e3;
+$socials-link:              $gray;
+$socials-link-hover:        $primary-color;
+
+// --- works ---
+$works-link-color:          $orange;
+$works-link-bg:             $gray-dark;
+
+// --- picture.html ---
+$picture-bg:                $gray-dark;
