--- a/src/styles/blocks/_works.scss
+++ b/src/styles/blocks/_works.scss
@@ -9,9 +9,9 @@
         
         &-inner {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
 
-            @media (max-width: 550px) {
+            @media (max-width: 600px) {
                 flex-direction: column;
                 align-items: center;
             }
@@ -19,7 +19,7 @@
 
         &-item {
             @media (max-width: $screen-md) {
-                padding: 0;
+                padding: 0 rem(10px);
             }
         }
     }
