--- a/src/styles/base/_core.scss
+++ b/src/styles/base/_core.scss
@@ -12,6 +12,10 @@ html, body {
     @media (max-width: $screen-sm) {
         font-size: 12px;
     }
+
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 .wrapper {
