saving work changes

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -96,6 +96,7 @@ $socials-border:            $gray-cfcfcf;
 $socials-item-border:       $gray-e3e3e3;
 $socials-link:              $gray;
 $socials-link-hover:        $primary-color;
+$socials-bg:                $body-bg;
 
 // --- works ---
 $works-link-color:          $orange;
