--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -9,6 +9,7 @@
     }
     
     &__link {
+        display: block;
         padding: rem(10px) 0;
         color: $nav-link-color;
         text-transform: uppercase;
