--- a/src/styles/blocks/_works.scss
+++ b/src/styles/blocks/_works.scss
@@ -7,7 +7,7 @@
 
     &__filter {
         
-        &-inner {
+        .nav__inner {
             display: flex;
             justify-content: center;
 
@@ -17,7 +17,7 @@
             }
         }
 
-        &-item {
+        .nav__item {
             @media (max-width: $screen-md) {
                 padding: 0 rem(10px);
             }
@@ -38,14 +38,13 @@
     }
 
     &__link {
+        display: block;
         position: relative;
         z-index: 1;
         
         &:before {
             @include center(x, y);
             z-index: 3;
-            width: 100%;
-            text-align: center;
             font-size: 3em;
             color: rgba($works-link-color, 0.6);
             opacity: 0;
